# homegear-management

./: .gitignore  CMakeLists.txt  LICENSE  README.md  configure.ac  makeRelease.sh
debian/: changelog  control  copyright  postinst  postrm  preinst  prerm  rules  source.lintian-overrides
misc/Config Directory/: management.conf  openssl.cnf
misc/System Config/: homegear-management.init  homegear-management.service  logrotate
src/: GD.cpp  GD.h  IpcClient.cpp  IpcClient.h  Makefile.am  Settings.cpp  Settings.h  main.cpp
